--- a/help.html
+++ b/help.html
@@ -39,7 +39,7 @@
 <body>
 <p>
     在游戏中，如果两张牌的数字加起来等于14，则会被消除!
-    <span><a href="">返回上一页</a></span>
+    <span><a href="https://liuyuanmoon.github.io/poke/login.html">返回上一页</a></span>
 </p>
 </body>
 </html>
