--- a/login.html
+++ b/login.html
@@ -44,8 +44,8 @@
 </style>
 <body>
 <div class="box">
-<p><a href="">开始游戏</a></p>
-    <span><a href="">游戏介绍</a></span>
+<p><a href="https://liuyuanmoon.github.io/poke/poke.html">开始游戏</a></p>
+    <span><a href="https://liuyuanmoon.github.io/poke/help.html">游戏介绍</a></span>
 </div>
 </body>
 </html>
